<resources>
    <string name="app_name">Jogos da Loteria</string>
    <string name="texto_abrir_menu">Abrir menu</string>
    <string name="texto_fechar_menu">Fechar menu</string>
    <string name="texto_menu_inicio">Início</string>
    <string name="texto_menu_apostas">Apostas</string>
    <string name="texto_menu_resultados">Resultados</string>
    <string name="label_data_sorteio">Data:</string>
    <string name="label_ganhadores">Ganhadores</string>
    <string name="label_concurso">Concurso:</string>
    <string name="texto_acumulou">Acumulou!</string>
    <string name="texto_carregando_dados_concurso">Carregando dados\ndo concurso</string>
    <string name="texto_carregando_ultimo_concurso">Carregando dados\ndo último concurso</string>
    <plurals name="texto_ganhador">
        <item quantity="zero">ganhadores</item>
        <item quantity="one">ganhador</item>
        <item quantity="other">ganhadores</item>
    </plurals>
    <string name="texto_estimativa_proximo_concurso">Estimativa para o próximo concurso:</string>
    <string name="texto_acumulado_proximo_concurso">Acumulado para o próximo concurso:</string>
    <string name="texto_acumulado_final_x">Acumulado para o próximo concurso final</string>
    <string name="texto_acumulado_especial">Acumulado para o concurso especial</string>
    <string name="texto_valor_arrecadado">Total arrecadado neste concurso:</string>
    <string name="url_parametro_1">\?timestampAjax=</string>
    <string name="url_parametro_2">&amp;concurso=</string>
    <string-array name="nomes_jogos">
        <item>MEGA-SENA</item>
        <item>QUINA</item>
        <item>LOTOFÁCIL</item>
        <item>LOTOMANIA</item>
        <item>DUPLA SENA</item>
        <item>FEDERAL</item>
        <item>DIA DE SORTE</item>
        <item>TIMEMANIA</item>
        <item>LOTECA</item>
        <item>LOTOGOL</item>
    </string-array>
    <string-array name="nomes_especiais">
        <item>Mega da Virada</item>
        <item>Quina de São João</item>
        <item>Lotofácil da Independência</item>
        <item>#</item>      
        <item>Dupla Sena de Páscoa</item>     
        <item>#</item>        
        <item>#</item>       
        <item>#</item>      
        <item>#</item>     
        <item>#</item>        
    </string-array>
    <string-array name="cores_primarias">
        <item>#FF209869</item>      
        <item>#FF260085</item>      
        <item>#FF930089</item>      
        <item>#FFF78100</item>      
        <item>#FFA61324</item>      
        <item>#FF103099</item>      
        <item>#FFCB852B</item>      
        <item>#FF00FF48</item>      
        <item>#FFFB1f00</item>      
        <item>#FF0086B7</item>      
    </string-array>
    <string-array name="cores_secundarias">
        <item>#22209869</item>      
        <item>#22260085</item>      
        <item>#22930089</item>      
        <item>#22F78100</item>      
        <item>#22A61324</item>      
        <item>#22103099</item>      
        <item>#22CB852B</item>      
        <item>#2200FF48</item>      
        <item>#22FB1f00</item>      
        <item>#220086B7</item>      
    </string-array>
    <string-array name="dias_sorteio">
        <item>4|7</item> 
        <item>2|3|4|5|6|7</item> 
        <item>2|4|6</item> 
        <item>3|6</item> 
        <item>3|5|7</item> 
        <item>2|3|4|5|6|7</item> 
        <item>3|5|7</item> 
        <item>3|5|7</item> 
        <item>2</item> 
        <item>2</item> 
    </string-array>
    <string name="caracter_nulo">#</string>
    <string-array name="urls_resultados">
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/megasena/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbwMPI0sDBxNXAOMwrzCjA0sjIEKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wNnUwNHfxcnSwBgIDUyhCvA5EawAjxsKckMjDDI9FQE-F4ca/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_HGK818G0KO6H80AU71KG7J0072/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/quina/!ut/p/a1/jc69DoIwAATgZ_EJepS2wFgoaUswsojYxXQyTfgbjM9vNS4Oordd8l1yxJGBuNnfw9XfwjL78dmduIikhYFGA0tzSFZ3tG_6FCmP4BxBpaVhWQuA5RRWlUZlxR6w4r89vkTi1_5E3CfRXcUhD6osEAHA32Dr4gtsfFin44Bgdw9WWSwj/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_61L0H0G0J0VSC0AC4GLFAD20G6/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/lotofacil/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbz8vTxNDRy9_Y2NQ13CDA0sTIEKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wBmoxN_FydLAGAgNTKEK8DkRrACPGwpyQyMMMj0VAcySpRM!/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_61L0H0G0J0VSC0AC4GLFAD2003/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/lotomania/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbz8vTxNDRy9_Y2NQ13CDA38jYEKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wBmoxN_FydLAGAgNTKEK8DkRrACPGwpyQyMMMj0VAajYsZo!/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_61L0H0G0JGJVA0AKLR5T3K00V0/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/duplasena/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbwMPI0sDBxNXAOMwrzCjA2cDIAKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wNnUwNHfxcnSwBgIDUyhCvA5EawAjxsKckMjDDI9FQGgnyPS/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_61L0H0G0J0I280A4EP2VJV30N4/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/federal/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbz8vTxNDRy9_Y2NQ13CDA0MzIAKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wBmoxN_FydLAGAgNTKEK8DkRrACPGwpyQyMMMj0VAYe29yM!/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_HGK818G0KGBB50QICV9UPL3086/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/diadesorte/!ut/p/a1/jc5BDsIgFATQs3gCptICXdKSfpA2ujFWNoaVIdHqwnh-sXFr9c_qJ2-SYYGNLEzxmc7xkW5TvLz_IE6WvCoUwZPwArpTnZWD4SCewTGDlrQtZQ-gVGs401gj6wFw4r8-vpzGr_6BhZmIoocFYUO7toLemqYGz0H1AUsTZ7Cw4X7dj0hu9QIyUWUw/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_HGK818G0KO5GE0Q8PTB11800G3/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/timemania/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbz8vTxNDRy9_Y2NQ13CDA1MzIEKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wBmoxN_FydLAGAgNTKEK8DkRrACPGwpyQyMMMj0VASrq9qk!/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_61L0H0G0JGJVA0AKLR5T3K00M4/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/loteca/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbz8vTxNDRy9_Y2NQ13CDA3cDYEKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wBmoxN_FydLAGAgNTKEK8DkRrACPGwpyQyMMMj0VAbNnwlU!/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_HGK818G0KOCO10AFFGUTGU0004/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
        <item>
            http://loterias.caixa.gov.br/wps/portal/loterias/landing/lotogol/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbwMPI0sDBxNXAOMwrzCjE18zYAKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wNnUwNHfxcnSwBgIDUyhCvA5EawAjxsKckMjDDI9FQFTuNFd/dl5/d5/L2dBISEvZ0FBIS9nQSEh/pw/Z7_HGK818G0KGBQD0ARPT1QLG1041/res/id=buscaResultado/c=cacheLevelPage/=/
        </item>
    </string-array>
    <string-array name="faixas_premiacoes">
        <item>6|5|4</item>                  
        <item>5|4|3|2</item>                
        <item>15|14|13|12|11</item>         
        <item>20|19|18|17|16|15|0</item>    
        <item>6|5|4|3#6|5|4|3</item>        
        <item>-</item>                      
        <item>7|6|5|4|-1</item>                
        <item>7|6|5|4|3|-1</item>              
        <item>14|13</item>                      
        <item>5|4|3</item>                      
    </string-array>
    <string-array name="texto_faixas_premiacoes">
        <item>Sena|Quina|Quadra</item>                                                                  
        <item>Quina|Quadra|Terno|Duque</item>                                                           
        <item>15 acertos|14 acertos|13 acertos|12 acertos|11 acertos</item>                             
        <item>20 acertos|19 acertos|18 acertos|17 acertos|16 acertos|15 acertos|Nenhum acerto</item>    
        <item>Sena|Quina|Quadra|Terno#Sena|Quina|Quadra|Terno</item>                                    
        <item>-</item>                                                                                  
        <item>7 acertos|6 acertos|5 acertos|4 acertos|Mês da sorte</item>                                            
        <item>7 acertos|6 acertos|5 acertos|4 acertos|3 acertos|Time do coração</item>                                  
        <item>14 acertos|13 acertos</item>                                                                                  
        <item>5 acertos|4 acertos|3 acertos</item>                                                                                  
    </string-array>
    <string-array name="quantidade_ganhadores">
        <item>ganhadores|ganhadores_quina|ganhadores_quadra</item>  
        <item>ganhadores|ganhadores_quadra|ganhadores_terno|qt_ganhador_duque</item>    
        <item>qt_ganhador_faixa1|qt_ganhador_faixa2|qt_ganhador_faixa3|qt_ganhador_faixa4|qt_ganhador_faixa5
        </item> 
        <item>
            qtGanhadoresFaixa1|qtGanhadoresFaixa2|qtGanhadoresFaixa3|qtGanhadoresFaixa4|qtGanhadoresFaixa5|qtGanhadoresFaixa6|qtGanhadoresFaixa7
        </item>   
        <item>
            ganhadores_sena1|qt_ganhador_quina_faixa1|qt_ganhador_quadra_faixa1|qt_ganhador_terno_faixa1#ganhadores_sena2|ganhadores_quina2|ganhadores_quadra2|qt_ganhador_terno_faixa2
        </item>    
        <item>-</item>  
        <item>qt_GANHADOR_FAIXA_1|qt_GANHADOR_FAIXA_2|qt_GANHADOR_FAIXA_3|qt_GANHADOR_FAIXA_4|qt_GANHADOR_MES_DE_SORTE
        </item>   
        <item>
            qt_GANHADOR_FAIXA_1|qt_GANHADOR_FAIXA_2|qt_GANHADOR_FAIXA_3|qt_GANHADOR_FAIXA_4|qt_GANHADOR_FAIXA_5|qt_GANHADOR_TIME_CORACAO
        </item>   
        <item>qtGanhadorFaixa1|qtGanhadorFaixa2</item> 
        <item>qt_ganhador_faixa1|qt_ganhador_faixa2|qt_ganhador_faixa3</item>   
    </string-array>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="texto_fazer_cadastro">Ainda não tem cadastro? Faça aqui!</string>
    <string name="texto_esqueci_senha">Esqueci minha senha</string>
    <string name="contDesc_foto_de_perfil">Foto de perfil</string>
    <string name="label_nome">Nome:</string>
    <string name="label_login_email">Login (e-mail)</string>
    <string name="hint_confirmar_nova_senha">Confirmar nova senha</string>
    <string name="hint_nova_senha">Nova senha</string>
    <string name="hint_senha_atual">Senha atual</string>
    <string name="label_alterar_senha">Alterar senha</string>
    <string name="texto_botao_salvar_alteracoes">Salvar alterações</string>
</resources>