<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.FragmentoPerfil"
        android:padding="16dp">
    <ImageView
            android:id="@+id/imageView_foto_perfil"
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/contDesc_foto_de_perfil"/>
    <LinearLayout
            android:id="@+id/linear_comandos_foto_perfil"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/imageView_foto_perfil"
            app:layout_constraintStart_toEndOf="@+id/imageView_foto_perfil"
            android:padding="4dp">
        <ImageButton
                android:src="@drawable/ic_editar"
                android:layout_width="30dp"
                android:layout_height="30dp" android:id="@+id/imageButton_editar_foto"/>
        <ImageButton
                android:src="@drawable/ic_remover"
                android:layout_width="30dp"
                android:layout_height="30dp" android:id="@+id/imageButton_remover_foto"/>
    </LinearLayout>
    <EditText
            android:id="@+id/editText_nome_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_nome"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <TextView
            android:id="@+id/textView5"
            android:text="@string/label_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView_email_perfil" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/editText_nome_perfil"/>
    <TextView
            android:id="@+id/textView9"
            android:text="@string/label_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView_email_perfil"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView_foto_perfil"/>
    <TextView
            android:id="@+id/textView_email_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginRight="8dp"/>
    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_nome_perfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">
            <TextView
                    android:id="@+id/textView16"
                    android:text="@string/label_alterar_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            <EditText
                    android:id="@+id/editText_senha_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/hint_senha_atual"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <EditText
                    android:id="@+id/editText_nova_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/hint_nova_senha"
                    android:layout_marginTop="8dp"/>
            <EditText
                    android:id="@+id/editText_nova_senha_confirma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/hint_confirmar_nova_senha"
                    android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
            android:text="@string/texto_botao_salvar_alteracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_salvar_perfil"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

    <FrameLayout
            android:id="@+id/frame_progresso_perfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:elevation="20dp"
            android:background="@color/branco_transparente"
            android:visibility="gone">
        <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>