<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.FragmentoCadastro"
        android:padding="16dp">

    <EditText
            android:id="@+id/editText_nome_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_nome"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editText_email_cadastro"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/editText_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/editText_nome_cadastro"
            app:layout_constraintBottom_toTopOf="@+id/editText_senha_cadastro"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/editText_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_senha"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/editText_email_cadastro"
            app:layout_constraintBottom_toTopOf="@+id/editText_senha_confirmacao" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/editText_senha_confirmacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_confirmar_senha"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/editText_senha_cadastro"
            app:layout_constraintBottom_toTopOf="@+id/button_cadastrar" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/button_cadastrar"
            android:text="@string/texto_botao_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_senha_confirmacao"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>