<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".resultados.FragmentoDetalhesResultado">

    <LinearLayout
            android:id="@+id/linearlayout_container_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_acumulou">

    </LinearLayout>

    <TextView
            android:id="@+id/textView9"
            android:text="@string/label_concurso"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_container_res"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <TextView
            android:id="@+id/textView_concurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@id/textView9" android:layout_marginStart="8dp"/>


    <TextView
            android:id="@+id/textView8"
            android:text="@string/label_data_sorteio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/textView_data_sorteio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView8" app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/label_ganhadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/textView_ganhadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/textView_acumulou"
            android:text="@string/texto_acumulou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp" android:textStyle="bold"
            android:textColor="@color/cor_megasena_1" android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>